--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -1,9 +1,9 @@
 # 
-# <https://github.com/KFERMercer/OpenWrt-CI>
+<https://github.com/KFERMercer/OpenWrt-CI>
 #
-# Copyright (C) 2019 P3TERX
+Copyright (C) 2019 P3TERX
 #
-# Copyright (C) 2020 KFERMercer
+Copyright (C) 2020 KFERMercer
 #
 name: OpenWrt-CI
 
