--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -1,17 +1,25 @@
 # 
-<https://github.com/KFERMercer/OpenWrt-CI>
+# <https://github.com/KFERMercer/OpenWrt-CI>
 #
-Copyright (C) 2019 P3TERX
+# Copyright (C) 2019 P3TERX
 #
-Copyright (C) 2020 KFERMercer
+# Copyright (C) 2020 KFERMercer
 #
 name: OpenWrt-CI
 
-on:
-  schedule:
-    - cron: 0 20 * * *
+on: 
   release:
     types: [published]
+
+  push:
+    branches: 
+      - master
+
+  schedule:
+    - cron: 0 8 * * 5
+  
+  watch:
+    types: [started]
 
 jobs:
 
